Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Contract_Renewal__c.object
<CustomObject>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Renewal Requests</relationshipLabel>
        <relationshipName>Contract_Renewal_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_term__c</fullName>
        <label>Renewal term</label>
        <picklist>
            <picklistValues>
                <fullName>6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24 Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Contract Renewal Requests</relationshipLabel>
        <relationshipName>Contract_Renewal_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contract Renewal Request</label>
    <nameField>
        <displayFormat>CRR-{0000}</displayFormat>
        <label>Contract Renewal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Renewal Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>